conditionally engage vmafd password refresh REST client -cleanup -address review comments
Change-Id: I174b222ad59e735fd456c52074b63a52c76cb73f

--- a/vmafd/config/vmafd.reg.in
+++ b/vmafd/config/vmafd.reg.in
@@ -81,3 +81,7 @@
     default = "/etc/ssl/certs"
     doc     = "CA Certs Path"
 }
+"UseVmDirREST" = {
+    default = dword:00000000
+    doc     = "Use REST api to communicate with remote Directory service"
+}
