Fix error handling for reset password api.
Jira ID: CNA-1255

Revive rest vmdir integration tests.

1. Config rest system tenant name as lw-testdom.com which is consistent with rest idm and oidc integ tests.
2. Rest vmdir does not have an api to create tenant. So use existing system tenant for integration tests.

Ran test-vmidentity script.

    ./support/scripts/test-vmidentity.sh photon-879xs6vz.lw-testdom.com

Change-Id: Id3e7acb93942c01eff2bd919a861e559ce5c4aa7

--- a/vmidentity/rest/vmdir/client/src/integration-test/resources/config.properties
+++ b/vmidentity/rest/vmdir/client/src/integration-test/resources/config.properties
@@ -5,11 +5,11 @@
 ##
 # System-level config
 ##
-system.tenant=vsphere.local
-system.domain=vsphere.local
+system.tenant=lw-testdom.com
+system.domain=lw-testdom.com
 
 ##
 # System Tenant's Admininistrator credentials
 ##
 system.admin.username=Administrator
-system.admin.password=Admin!23
+system.admin.password=Ca$hc0w1
