Add integration tests for wsTrustClient
Change-Id: I734542c101540323e53eedad633a26e99d59ca40

Add ssolib-sample war

This is a WebSSO Sample that can be used for integration testing

Change-Id: I8e22d38ce8b893eb354a5e728efd019d9b3786c0

--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -51,7 +51,8 @@ vmstsjars_DATA= \
 
 vmstswebapps_DATA= \
     @top_builddir@/vmidentity/vmware-sts/packages/openidconnect-sample-rp.war \
-    @top_builddir@/vmidentity/vmware-sts/packages/ROOT.war
+    @top_builddir@/vmidentity/vmware-sts/packages/ROOT.war \
+    @top_builddir@/vmidentity/vmware-sts/packages/ssolib-sample.war
 
 sbin_SCRIPTS = \
     @top_srcdir@/vmidentity/websso/src/main/resources/sso-config.sh \
