--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -28,6 +28,7 @@
         <module>idm</module>
         <module>commons</module>
         <module>ssolib</module>
+        <module>ssolib-sample</module>
         <module>samlauthority</module>
         <module>tomcat-extensions</module>
         <module>install</module>
@@ -40,60 +41,7 @@
         <module>service</module>
       </modules>
     </profile>
-
-    <profile>
-      <id>rd-identity-server</id>
-      <activation>
-        <property>
-          <name>PRODUCT_NAME</name>
-          <value>rd-identity-server</value>
-        </property>
-      </activation>
-      <properties>
-        <PRODUCT_NAME>rd-identity-server</PRODUCT_NAME>
-      </properties>
-      <modules>
-        <module>tcserver</module>
-        <module>diagnostics</module>
-        <module>platform</module>
-        <module>idm</module>
-        <module>exportTool</module>
-        <module>migration</module>
-        <module>commons</module>
-        <module>wstclient</module>
-        <module>httpSsoAuth</module>
-        <module>ssolib</module>
-        <module>sso-config</module>
-        <module>sso-ha</module>
-        <module>samlauthority</module>
-        <module>admin-interfaces</module>
-        <module>wstauthz</module>
-        <module>admin-sdk</module>
-        <module>lookup</module>
-        <module>tomcat-extensions</module>
-        <module>install</module>
-        <module>rest</module>
-        <module>admin</module>
-        <module>openidconnect</module>
-        <module>ssolib-sample</module>
-        <module>infraclient-samples</module>
-        <module>ldapSchemaTool</module>
-        <module>service-providers</module>
-        <module>sts</module>
-        <module>websso</module>
-        <module>ims-stub</module>
-        <module>service</module>
-      </modules>
-    </profile>
   </profiles>
-
-  <distributionManagement>
-    <repository>
-      <id>lightwave</id>
-      <name>lightwave</name>
-      <url>http://artifactory.ec.eng.vmware.com:8081/artifactory/lightwave-testmaven</url>
-    </repository>
-  </distributionManagement>
 
   <build>
     <plugins>
@@ -326,6 +274,7 @@
     <!-- Dependency Versions -->
     <FastInfoset.version>1.2.8</FastInfoset.version>
     <activation.version>1.1.1</activation.version>
+    <aop.version>1.0</aop.version>
     <apache.log4j.version>2.8.2</apache.log4j.version>
     <args4j.version>2.33</args4j.version>
     <asm.version>5.0.3</asm.version>
@@ -336,6 +285,7 @@
     <commons.cli.version>1.2</commons.cli.version>
     <commons.codec.version>1.9</commons.codec.version>
     <commons.collection.version>3.2.2</commons.collection.version>
+    <commons.configuration.version>1.9</commons.configuration.version>
     <commons.daemon.version>1.0.8</commons.daemon.version>
     <commons.fileupload.version>1.3.3</commons.fileupload.version>
     <commons.io.version>2.4</commons.io.version>
@@ -344,6 +294,7 @@
     <commons.logging.version>1.2</commons.logging.version>
     <commons.pool2.version>2.4.2</commons.pool2.version>
     <easymock.version>3.2</easymock.version>
+    <esapi.version>2.0.1</esapi.version>
     <gmbal-api-only.version>3.1.0-b001</gmbal-api-only.version>
     <ha-api.version>3.1.9</ha-api.version>
     <httpclient.version>4.5.1</httpclient.version>
