add acquire token to hmake sanity - require this base for feature tests - add afd rest integration tests for password refresh - provide a README for env file
Change-Id: I37df5dcc3a31eff97063b3107514996f6c3917c9

--- a/support/tests/lightwave/.env
+++ b/support/tests/lightwave/.env
@@ -1,4 +1,3 @@
 LIGHTWAVE_DOMAIN=lightwave.local
-#uncomment and provide password as needed
-#password can also be provided as env var to hmake test
-#LIGHTWAVE_PASS=''
+#must set LIGHTWAVE_PASS in this file before running hmake tests
+#LIGHTWAVE_PASS=<password min 8 chars, 1 cap, 1 num, 1 special>
