--- a/vmidentity/openidconnect/common/pom.xml
+++ b/vmidentity/openidconnect/common/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>${javax.servlet-api.version}</version>
+      <version>${javax.servlet.version}</version>
     </dependency>
 
     <dependency>
