--- a/vmidentity/openidconnect/protocol/pom.xml
+++ b/vmidentity/openidconnect/protocol/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>${javax.servlet-api.version}</version>
+      <version>${javax.servlet.version}</version>
     </dependency>
 
     <!-- Test Dependencies -->
