--- a/vmidentity/openidconnect/sample/pom.xml
+++ b/vmidentity/openidconnect/sample/pom.xml
@@ -102,7 +102,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>${javax.servlet-api.version}</version>
+      <version>${javax.servlet.version}</version>
       <scope>provided</scope>
     </dependency>
 
