Send lightwave git commit hash to metrics
- This change will save the latest lightwave and post git commit
  hash in metrics so that we can view the versions being deployed

Change-Id: Id581403e2a7496ceaf460b01456898eb2902adcc

--- a/configure.ac
+++ b/configure.ac
@@ -1518,6 +1518,14 @@ AC_SUBST(pscsetupjarsdir)
 vmmetricsconfdir="$datadir/config"
 AC_SUBST(vmmetricsconfdir)
 
+#--------------------------------------------------------------------
+
+gitcommithash=`echo $(git rev-parse --short HEAD)`
+AC_SUBST(gitcommithash)
+AC_DEFINE_UNQUOTED(GIT_COMMIT_HASH, "$gitcommithash", [Git Commit Hash])
+
+#--------------------------------------------------------------------
+
 AC_CONFIG_FILES([Makefile
                  vmcommon/Makefile
                  vmcommon/include/Makefile
