De-privilege DNS service
Jira Task: CNA-783

This change is to enable DNS service to be run as lightwave user
instead of root

Testing:
- Created end-to-end setup with 2 lightwave nodes
- Upgraded lightwave server on 1 node
- Verified that vmdns is running as lightwave user
- Tried nslookup on hostnames in domain and out of domain
- Ran downstream service tests
- Upgraded lightwave server on 2nd node
- Verified that vmdns is running as lightwave user
- Tried nslookup again
- Ran downstream service tests again

Change-Id: I06513c9ed49710ebb9019bdc0da89a3f78a33354

--- a/vmdns/config/vmdns.reg.in
+++ b/vmdns/config/vmdns.reg.in
@@ -29,6 +29,15 @@
     default = dword:00000001
     doc = ""
 }
+"User" = {
+    default = "lightwave"
+    doc = ""
+}
+"Group" = {
+    default = "lightwave"
+    doc = ""
+}
+
 [HKEY_THIS_MACHINE\Services\vmdns\Parameters]
 "EnableDNSProtocol" = {
     default = dword:00000001
