--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -180,6 +180,17 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Fortify Scan -->
+      <plugin>
+        <groupId>com.hpe.security.fortify.maven.plugin</groupId>
+        <artifactId>sca-maven-plugin</artifactId>
+        <version>${maven.fortify.plugin.version}</version>
+        <configuration>
+          <skipTests>true</skipTests>
+          <source>${java.version}</source>
+          <findbugs>true</findbugs>
+        </configuration>
+      </plugin>
       <!-- Cleanup -->
       <plugin>
         <inherited>false</inherited>
@@ -243,7 +254,7 @@
   <properties>
     <!-- Project Settings -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.7</java.version>
+    <java.version>1.8</java.version>
     <vmware.version>${project.version}</vmware.version>
     <skipIntegrationTests>true</skipIntegrationTests>
 
@@ -265,6 +276,7 @@
     <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
     <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
     <maven.war.plugin.version>3.0.0</maven.war.plugin.version>
+    <maven.fortify.plugin.version>17.20</maven.fortify.plugin.version>
 
     <!-- OSGi Configuration -->
     <bundle.symbolicName>com.vmware.sso.client</bundle.symbolicName>
