DNS De-Privilege: Adding correct ACL to registry
- The previous commit enabling DNS to be run as lightwave user
  broke the add-forwarders functionality, since lightwave user did
  not have write permission to registry
- This change fixes this issue by adding the correct ACL to vmdns
  registry
- Also removed the vmdns-client registry since it is not needed
- Testing: Tested add-forwarder from vmdns-cli before and after the
  change

Change-Id: Ief293e4b6633c6509237ff2f170c5c8dd49a5d61

--- a/vmdns/config/vmdns.reg.in
+++ b/vmdns/config/vmdns.reg.in
@@ -1,6 +1,7 @@
 [HKEY_THIS_MACHINE\Services]
 
 [HKEY_THIS_MACHINE\Services\vmdns]
+@security = O:SYG:BAD:(A;;KA;;;BA)(A;;KA;;;S-1-22-1-@LIGHTWAVE_UID@)(A;;KR;;;WD)
 "Description" = {
     default = "VMware Domain Name Service"
     doc = ""
@@ -39,6 +40,7 @@
 }
 
 [HKEY_THIS_MACHINE\Services\vmdns\Parameters]
+@security = O:SYG:BAD:(A;;KA;;;BA)(A;;KA;;;S-1-22-1-@LIGHTWAVE_UID@)(A;;KR;;;WD)
 "EnableDNSProtocol" = {
     default = dword:00000001
     value   = dword:00000001
