Multi-Value MetaData Processing
Jira Id: CNA-932, CNA-1507

Changes:
    - Define common interfaces to accomodate new multi-value
      metadata data structure.
    - There were inconsistenty in StringToNumberic modules in
      vmdir. Address some of the inconsistency by defining new APIs'.
    - Modified the supplier side logic for multi-value attr metadata.
    - Added unit tests for the modules in server/common folder
    - Modified consumer side logic to multi-value attr metadata.
    - Modified external I/O logic to multi-value attr metadata.

Testing:
    - Overnight tenant create and delete.
      Verification: clean integrity check report
    - Code coverage tests:
          - Add entry with multiple values and no value metadata.
            Verification: entries replicated successfully and metadata
            was stamped correctly.
          - Modify entry with multiple values and value metadata.
            Verification: entries replicated successfully and metadata
            was stamped correctly.
          - Delete entry with multiple values and value metadata.
            Verification: entries replicated successfully and metadata
            was stamped correctly.
          - Verified multi value attribute replace logic.
          - Verified supplier side inscope logic for replication.
          - Verified ReplAdd entry with multi value attribute metadata
            works as expected.
          - Verified ReplModify entry with multi value attribute metadata
            works as expected.
          - Manually induced attribute level and attribute value level
            conflict resolution and verified that conflict resolution
            was done as expected.
    - Exercised Valgrind and ensured memory report was clean.

Change-Id: Ib746617441f92fcc8527c5a43c17c1fbf0076909

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -23,6 +23,7 @@ libsrvcommon_la_SOURCES = \
     security-sd.c         \
     srp.c                 \
     util.c                \
+    valuemetadata.c       \
     vectorutils.c         \
     vmafdlib.c            \
     vmdirentry.c          \
