Add group names to vmpac
This change adds vmdir group names as unicode strings to vmpac.

Change-Id: I73aa109e3fc50bd39698d34bec6c633b33e1df40

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -95,6 +95,7 @@ vmdird_LDADD = \
     @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
+    @LWADVAPI_LIBS@ \
     @GSSAPI_LIBS@ \
     @SASL_LIBS@ \
     @UUID_LIBS@ \
