atomic join rest server and client - remove unused files - squash pending parent commits - +address review comments
Change-Id: I0eac8655c852f7cd3e20b3ae3449c4986efca123

--- a/vmcommon/Makefile.am
+++ b/vmcommon/Makefile.am
@@ -18,7 +18,8 @@ libvmcommon_la_SOURCES = \
     vmstring.c \
     vmhttpclient.c \
     vmjsonresult.c \
-    vmmetrics.c
+    vmmetrics.c \
+    vmnetworkutil.c
 
 libvmcommon_la_LIBADD = \
     @CURL_LIBS@ \
