--- a/vmca/service/Makefile.am
+++ b/vmca/service/Makefile.am
@@ -2,8 +2,10 @@ sbin_PROGRAMS = vmcad
 
 idl_srcdir=$(top_srcdir)/vmca/idl
 
+SUBDIRS = \
+    common
+
 vmcad_SOURCES = \
-    policy.c \
     auth.c \
     dirsync.c \
     entrypoints.c \
@@ -16,7 +18,6 @@ vmcad_SOURCES = \
     rpcserv.c \
     service.c \
     signal.c \
-    snpolicy.c \
     state.c \
     thread.c \
     utils.c \
@@ -39,6 +40,8 @@ endif
 vmcad_CPPFLAGS = \
     -I$(top_srcdir)/vmca/include \
     -I$(top_srcdir)/vmca/include/public \
+    -I$(top_srcdir)/vmca/service/include \
+    -I$(top_srcdir)/vmca/service/common \
     -I$(top_srcdir)/vmafd/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
@@ -50,6 +53,7 @@ vmcad_CPPFLAGS = \
     @CRESTENGINE_INCLUDES@
 
 vmcad_LDADD = \
+    $(top_builddir)/vmca/service/common/libvmcasrvcommon.la \
     $(top_builddir)/vmca/common/libcommon.la \
     $(top_builddir)/vmca/vmcadb/libvmcadb.la \
     $(top_builddir)/vmafd/client/libvmafdclient.la \
