Fix ssolib-sample and associated Docker image
The vmware-sampled.sh.in script accepts an argument for the FQDN of the lightwave domain controller. This value over-rides the value obtained from the servlet-context.

Change-Id: I951f38d5bf2657c3233811562c4574e4ffe1d875

--- a/support/docker/sample/photon2/Dockerfile
+++ b/support/docker/sample/photon2/Dockerfile
@@ -5,7 +5,7 @@ VOLUME ["/sys/fs/cgroup"]
 LABEL vendor="VMware, Inc."
 LABEL com.vmware.lightwave.sample.version="1.0.0"
 
-EXPOSE 443
+EXPOSE 443 5005
 ENTRYPOINT ["/lightwave-init"]
 
 # Build hook
