Revert "Add security manager to sts"
This reverts commit b6d9bcdbd3f7ce2899a40f2f862de8dbbe182fe3.

Change-Id: Ida292cc3730449efd9c6a528d4c64d79e75ad0cf

--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -71,8 +71,7 @@ vmstsconf_DATA = \
     @top_builddir@/vmidentity/config/catalina.policy \
     @top_builddir@/vmidentity/config/context.xml \
     @top_builddir@/vmidentity/config/tomcat-users.xml \
-    @top_builddir@/vmidentity/config/vmsts-telegraf.conf \
-    @top_builddir@/vmidentity/config/sts.policy
+    @top_builddir@/vmidentity/config/vmsts-telegraf.conf
 
 vmidmconf_DATA= \
     @top_srcdir@/vmidentity/sso-config/src/main/resources/ssoconfig.log4j2.xml \
@@ -82,8 +81,7 @@ vmidmconf_DATA= \
 
 vmstsbin_DATA = \
     @top_builddir@/vmidentity/config/setenv.sh \
-    @top_builddir@/vmidentity/vmware-sts/packages/vmware-identity-tomcat-extensions.jar \
-    @top_builddir@/vmidentity/vmware-sts/packages/lib/pro-grade-1.1.1.jar
+    @top_builddir@/vmidentity/vmware-sts/packages/vmware-identity-tomcat-extensions.jar
 
 vmstssampleconf_DATA = \
     @top_builddir@/vmidentity/config/server.xml \
