--- a/vmidentity/ssolib/pom.xml
+++ b/vmidentity/ssolib/pom.xml
@@ -256,6 +256,11 @@
       <artifactId>asm</artifactId>
       <version>${asm.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.vmware.identity.commons</groupId>
+      <artifactId>samltoken</artifactId>
+      <version>1.3.0-SNAPSHOT</version>
+    </dependency>
 
     <!-- Test Dependencies -->
     <dependency>
