Create new folder for Replication V2.0
All changes to the replication algorithm will be checked into this folder.

Change-Id: I94ad6619f6ea9528b9d02fbb4b42b7fff15cd0c7

--- a/configure.ac
+++ b/configure.ac
@@ -1650,6 +1650,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/server/api/Makefile
                  vmdir/server/rest-head/Makefile
                  vmdir/server/replication/Makefile
+                 vmdir/server/replication2/Makefile
                  vmdir/server/clusterstate/Makefile
                  vmdir/server/saslvmdirdb/Makefile
                  vmdir/server/vmdir/Makefile
