--- a/vmidentity/config/vmware-stsd.sh.in
+++ b/vmidentity/config/vmware-stsd.sh.in
@@ -67,13 +67,17 @@ StartService()
             $JAVA_OPTS \
             $CATALINA_OPTS \
             -Djava.endorsed.dirs="$CATALINA_HOME/endorsed" \
-            -classpath "$JSVC_HOME/*:$CATALINA_HOME/lib/*:$CATALINA_HOME/bin/bootstrap.jar:$CATALINA_HOME/bin/tomcat-juli.jar:$CATALINA_BASE/bin/vmware-identity-tomcat-extensions.jar" \
+            -classpath "$JSVC_HOME/*:$CATALINA_HOME/lib/*:$CATALINA_HOME/bin/bootstrap.jar:$CATALINA_HOME/bin/tomcat-juli.jar:$CATALINA_BASE/bin/pro-grade-1.1.1.jar:$CATALINA_BASE/bin/vmware-identity-tomcat-extensions.jar" \
             -Dcatalina.base=$CATALINA_BASE \
             -Dcatalina.home=$CATALINA_HOME \
             -Dvmware.log.dir=$STSD_LOG_DIR \
             -Dorg.apache.catalina.connector.CoyoteAdapter.ALLOW_BACKSLASH=true \
             -Djava.io.tmpdir="$CATALINA_BASE/temp" \
             -Djavax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl \
+            -Djava.security.manager=net.sourceforge.prograde.sm.ProGradeJSM \
+            -Djava.security.policy==$CATALINA_BASE/conf/sts.policy \
+            -Djna.nounpack=true \
+            -Djna.boot.library.path=$CATALINA_BASE/conf \
             $DAEMON_CLASS start
 
     rc=$?
