Added new replication data structures
Work in progress

Change-Id: I9f4003d27eea50f41a1b77212206567a4529d251

--- a/vmdir/server/Makefile.am
+++ b/vmdir/server/Makefile.am
@@ -9,6 +9,12 @@
 
 STOREDIRS = mdb-store
 
+if REPLICATION_V2
+    REPLDIR = replication2
+else
+    REPLDIR = replication
+endif
+
 SUBDIRS = \
     kdcsrvcommon \
     kdckrb5 \
@@ -22,7 +28,7 @@ SUBDIRS = \
     api \
     rest-head \
     middle-layer \
-    replication \
+    $(REPLDIR) \
     clusterstate \
     saslvmdirdb \
     schema \
