--- a/vmdir/server/replication2/Makefile.am
+++ b/vmdir/server/replication2/Makefile.am
@@ -14,9 +14,10 @@ libreplication_la_SOURCES = \
     metrics.c \
     replcookies.c \
     replentry.c \
-    replqueue.c \
     thread.c \
-    utdvector.c
+    utdvector.c \
+    update.c \
+    updatelist.c
 
 libreplication_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
