--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -325,6 +325,7 @@
     <jersey.version>2.25.1</jersey.version>
     <jackson-jaxrs-json-provider.version>2.9.6</jackson-jaxrs-json-provider.version>
     <joda.version>2.2</joda.version>
+    <jsoup.version>1.11.3</jsoup.version>
     <jsr173_api.version>1.0</jsr173_api.version>
     <jsr181-api.version>1.0-MR1</jsr181-api.version>
     <jsr250-api.version>1.0</jsr250-api.version>
