Add build time RPM dependency on cmocka for Photon 1.0.
Change-Id: Ie87a0507f1f9097fec6c3fbf7aa4cc77f406188e

--- a/support/toolchain/docker/photon1/Dockerfile
+++ b/support/toolchain/docker/photon1/Dockerfile
@@ -16,6 +16,7 @@ RUN tdnf update -y --refresh rpm-4.13.0.1 tdnf && \
         binutils-2.29.1 \
         boost-devel-1.60.0 \
         c-rest-engine-devel-1.2 \
+        cmocka-1.1.1 \
         copenapi-devel-0.0.1 \
         e2fsprogs-devel-1.42.13 \
         elfutils-0.169 \
