--- a/configure.ac
+++ b/configure.ac
@@ -196,6 +196,27 @@ fi
 AM_CONDITIONAL(LIGHTWAVE_BUILD, [$LIGHTWAVE_BUILD])
 
 #--------------------------------------------------------------------
+# replication v2 flag
+
+REPLICATION_V2=false
+AC_ARG_ENABLE([replicationv2],
+    [AC_HELP_STRING([--enable-replication-v2],
+                    [enable replication v2 (default: disabled)])],
+    [
+        if test x"$enableval" = x"yes"
+        then
+            REPLICATION_V2=true
+        fi
+    ])
+
+if $REPLICATION_V2
+then
+AC_DEFINE_UNQUOTED(REPLICATION_V2, 1, [ enable replication v2 ])
+fi
+
+AM_CONDITIONAL(REPLICATION_V2, [$REPLICATION_V2])
+
+#--------------------------------------------------------------------
 # client only build
 
 ENABLE_SERVER=true
