Init dns records with lightwave cli
Before, lightwave cli or vdcpromo did not initialize site specific SRV
records. This change adds functionality to lightwave cli to initialize
DNS records for the current DC as well as site specific SRV records.

Changes:
- add optional site param to IPC call to ConfigureDNS()
- add dns init-dc functionality to lightwave cli

Testing:
- deleted dns records, ran dns init-dc with and without site param,
 verified site-specific SRV records were created accordingly

Jira ID: CNA-1775

Change-Id: If439cd92ff3a03d9cda337c925965b8ab88dca4f

--- a/config/tools/lightwave/dns/Makefile.am
+++ b/config/tools/lightwave/dns/Makefile.am
@@ -1,7 +1,8 @@
 noinst_LTLIBRARIES = libdns.la
 
 libdns_la_SOURCES = \
-    delete.c
+    delete.c \
+	init-dc.c
 
 libdns_la_CPPFLAGS = \
     -I$(top_srcdir)/config/include \
