--- a/vmidentity/wsTrustClient/src/integration-test/resources/config.properties
+++ b/vmidentity/wsTrustClient/src/integration-test/resources/config.properties
@@ -10,30 +10,30 @@
 
 oidc.op.port = 443
 oidc.rp.prefix = oidc-client-test-
-system.tenant = lightwave.local
-system.domain = lightwave.local
-system.admin.username = Administrator@lightwave.local
-system.admin.password = Admin!23
+system.tenant = lw-testdom.com
+system.domain = lw-testdom.com
+system.admin.username = Administrator@lw-testdom.com
+system.admin.password = Ca$hc0w1
 
 # Specify an existing SSO user that has administrative role
 sso.admin.user.name=administrator
 sso.admin.user.pass=xxx
-sso.admin.user.domain=lightwave.local
+sso.admin.user.domain=lw-testdom.com
 
 localUser.user.name=rrr
 localUser.user.password=rrr
 localUser.user.domain=localos
 localUser.group.name=
 
-dbUser.user.name=administrator@lightwave.local
+dbUser.user.name=administrator@lw-testdom.com
 dbUser.user.password=xxx
-dbUser.user.domain=lightwave.local
+dbUser.user.domain=lw-testdom.com
 dbUser.group.name=
 
 # Specify an existing SSO user
 sso.valid.user.name=administrator
 sso.valid.user.pass=xxx
-sso.valid.user.domain=lightwave.local
+sso.valid.user.domain=lw-testdom.com
 
 #***************************************************************
 # end of parameters needing frequent update
