Refactor STS to support /isAvailable endpoint
Before, STS did not support an endpoint to indicate that it is
responding, so other services had to poll various endpoints itself to
get status. Also, STS required dependent services to be up and running
on upgrade. This change removes that dependency on upgrade and supports
an endpoint to represent overall health of the service.

Changes:
- Start health checker thread to get status of lwsm services and sts
endpoints. Start thread when servlets are initialized
- vmca is checked by getting root cert instead of running shell command
- Support /isAvailable endpoint

Testing:
- ran script to start/stop all individual services and curl endpoint,
verifying status
- verified in logs that health checker thread started/stopped correctly
- ran integration and unit tests

Change-Id: I05ce201df941a1842685f2bd043416e279591450

--- a/vmidentity/service/pom.xml
+++ b/vmidentity/service/pom.xml
@@ -102,7 +102,7 @@
       <artifactId>vmware-directory-rest-server</artifactId>
       <version>${vmware.version}</version>
     </dependency>
-   <!-- Jackson Dependencies -->
+    <!-- Jackson Dependencies -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
@@ -136,6 +136,32 @@
       <groupId>io.prometheus</groupId>
       <artifactId>simpleclient_servlet</artifactId>
       <version>${prometheus.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>${httpcore.version}</version>
+    </dependency>
+    <!-- VMware Dependencies -->
+    <dependency>
+      <groupId>com.vmware.vmafd</groupId>
+      <artifactId>vmware-endpoint-certificate-store</artifactId>
+      <version>${vmware.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.vmware.vmafd</groupId>
+      <artifactId>afd-heartbeat-service</artifactId>
+      <version>${vmware.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.vmware.vmafd</groupId>
+      <artifactId>authentication-framework</artifactId>
+      <version>${vmware.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.vmware.identity.rest.afd</groupId>
+      <artifactId>vmware-identity-rest-afd-client</artifactId>
+      <version>${vmware.version}</version>
     </dependency>
   </dependencies>
 
