Multi-Value MetaData Processing [Merging ReplV2]
Changes:
    - Not a new change, just merging the changes to replv2 folder

Testing:
    - Not required, since replicationv2 folder is excluded from pipeline
      trigger.
    - Verified build passes with and without Replication2 build flag.

Change-Id: I38de3d78570c57c8750daca22d5d5e91ecc71a95

--- a/vmdir/server/replication2/Makefile.am
+++ b/vmdir/server/replication2/Makefile.am
@@ -17,7 +17,8 @@ libreplication_la_SOURCES = \
     thread.c \
     utdvector.c \
     update.c \
-    updatelist.c
+    updatelist.c \
+    valuemetadata.c
 
 libreplication_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
