CN and SAN Policy
CSR CN Policy.  This verifies the CommonName entries in the CSR subject
name before accepting a CSR.

Currently, the supported checks are:

    * CN cannot be an IP address
    * CN cannot be an FQDN
    * CN cannot contain any wildcards
    * CN must be in a whitelist defined in the array CNPolicyWhitelist
    at registry key `HKEY_LOCAL_MACHINE\Services\vmca\Parameters`
        * If an entry contains `*<<hostname>>`, then it will allow any
        CN entry that has the prefix, *, pre-pended with the requestor's
        hostname

Order matters--the order of checks listed above defines how the CN field
will be checked.  A CSR will be reject immediately if any of the checks
fail.  For example, the whitelist cannot contain an IP address.  If it
does, then the whitelist check won't even happen--the first step, IP
check, will reject the request.

CSR SAN Policy.  This verifies that the SubjectAlternativeName entries
in the CSR before accepting it.

Currently, the supported checks are:

    * SAN IP entries can only be in the local subnet (127.0.0.0/8)
    * SAN IP entries can only be in the private subnets defined by RFC
    5735
    * SAN DNS entries can only be values defined in the array
    SANPolicyWhitelist at registry key
    `HKEY_LOCAL_MACHINE\Services\vmca\Parameters`
        * If an entry contains `*.example.com` for example, then it will
        allow any DNS entry that ends in `example.com`
        * If an entry contains `req.upn.cn`, then it will allow any DNS
        entry that is the requestor machine account CN
        * If an entry contains `req.upn.fqdn`, then it will allow any
        DNS entry that is the requestors FQDN
        * Otherwise, entries are treated as strings and matched
        literally

Testing:

    * CSR CN contained no FQDN, no IP, no Wildcards, and value was in
    registry in
    HKEY_LOCAL_MACHINE\Services\vmca\Parameters\CNPolicyWhitelist.
    * No CSR CN contained FQDN
    * No CSR CN contained IP
    * No C

--- a/vmca/service/common/Makefile.am
+++ b/vmca/service/common/Makefile.am
@@ -2,9 +2,13 @@ noinst_LTLIBRARIES = libvmcasrvcommon.la
 
 libvmcasrvcommon_la_SOURCES = \
     config.c \
+    cnpolicy.c \
     ldap.c \
+    opensslutil.c \
     policy.c \
-    snpolicy.c
+    sanpolicy.c \
+    snpolicy.c \
+    util.c
 
 libvmcasrvcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/vmca/include \
