Replv2 Algorithm Implementation
Changes:
    - Implemented linkedlist merge sort. (both ascending and descending)
          - Sorting function will be used in two scenarios
                - To sort the metadata and value metadata list
                - To sort the extracted events before UpdateApply
    - Implemented AttributeMetaData to LinkedList
    - Implemented AttributeMetaData LinkedList to HashMap
    - Implemented AttributeValueMetaData to LinkedList
    - Implemented AttributeValueMetaData LinkedList to Dequeue
          - Functions are used to populate the AttributeMetaData
            and AttributeValueMetaData List in PVMDIR_REPLICATION_UPDATE
    - Implemented Logic to construct USNList from Metadata/ValueMetaData
      LinkedList
    - Logic to Expand Events
    - Implementation of ReplV2 algorithm
    - Addressed review comments

Testsing:
    - Functionality testing will be done in the next phase.
      When code is checked in replv2 algorithm will be disabled, hence
      should not affect the existing replication algorithm.
    - Verified build succeeds with and without REPLICATION_V2 flag.

Change-Id: Ie66c740b60d290372847be73a5ed04235571d4b3

--- a/configure.ac
+++ b/configure.ac
@@ -1744,6 +1744,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/gssapi-plugins/srp/Makefile
                  vmdir/gssapi-plugins/unix/Makefile
                  vmdir/unit-tests/Makefile
+                 vmdir/unit-tests/common/Makefile
                  vmdir/unit-tests/server/Makefile
                  vmdir/unit-tests/server/common/Makefile
                  vmdir/unit-tests/server/replication2/Makefile
