--- a/vmdir/unit-tests/server/replication2/Makefile.am
+++ b/vmdir/unit-tests/server/replication2/Makefile.am
@@ -7,9 +7,12 @@ TESTS = replication2
 
 replication2_SOURCES = \
     main.c \
+    extractevents.c \
+    update.c \
     updatelist.c
 
 replication2_CPPFLAGS = \
+    -g \
     -I$(top_srcdir)/vmdir/include \
     -I$(top_srcdir)/vmdir/include/public \
     -I$(top_srcdir)/vmdir/thirdparty/openldap/include \
